--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
+    "headlessui": "github:tailwindlabs/headlessui",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
